kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-app-deployment
  namespace: lms-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lms-app
  template:
    metadata:
      labels:
        app: lms-app
    spec:
      containers:
      - name: lms-app
        image: 688428951895.dkr.ecr.ap-southeast-1.amazonaws.com/lms-app:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "400Mi"
          requests:
            cpu: "0.25"
            memory: "350Mi"
