kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-service
  namespace: lms-system
spec:
  selector:
    app: lms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
