kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-system-ingress
  namespace: lms-system
  labels:
    app: lms-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: "/centers"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:688428951895:certificate/5eef7ad3-7761-479c-aaac-1767679eaa6c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: ecourse.ukm.my
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
    - host: ecourse.ukm.my
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lms-service
                port:
                  number: 80
